Sample controller and service refactor